Modified editor frontend and linked it to createNote endpoint; added addTag endpoint, which is triggered within createNote
